fix close element on mobile

--- a/overlay.css
+++ b/overlay.css
@@ -32,20 +32,21 @@ body.overlay-active {
 }
 .overlay-close {
   position: fixed;
-  top: 8px;
-  right: 8px;
-  color: #b3b3b1;
-  background: #f9f9f9;
+  top: 0px;
+  right: 0px;
+  color: #888;
+  background: #fff;
   background: rgba(0,0,0,0);
-  padding: 4px;
+  padding: 12px;
+  text-decoration: none;
   margin: 0;
   border: 0;
   outline: none;
   font: 500 24px/1 "Helvetica Neue", sans-serif;
 }
 .overlay-close:hover {
+  color: #000;
   cursor: pointer;
-  color: #333;
 }
 .overlay-container {
   max-width: 680px;
